Producto-service integrado con todo lo nuevo solicitado